force-app/src/objects/cpm__Reference_Generator_Run__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Reference Generator Runs</relationshipLabel>
        <relationshipName>Reference_Generator_Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Error_Field__c</fullName>
        <label>Error Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Generator_Type__c</fullName>
        <label>Generator Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Id_Field__c</fullName>
        <label>Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Id__c</fullName>
        <label>Last Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Other_Input_Fields2__c</fullName>
        <label>Other Input Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Other_Input_Fields__c</fullName>
        <label>Other Input Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Other_Output_Fields2__c</fullName>
        <label>Other Output Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Other_Output_Fields__c</fullName>
        <label>Other Output Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Processor__c</fullName>
        <label>Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Reference_Field__c</fullName>
        <label>Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Reference_Type__c</fullName>
        <label>Reference Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Report_Folder_Name__c</fullName>
        <label>Report Folder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Source_Type__c</fullName>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Generating</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Request Generator Run</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__Status__c</columns>
        <columns>cpm__Reference_Type__c</columns>
        <columns>cpm__Generator_Type__c</columns>
        <columns>cpm__Source_Type__c</columns>
        <columns>cpm__Report_Name__c</columns>
        <columns>cpm__Report_Folder_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Request Generator Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Request Generator Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>